[gd_scene load_steps=3 format=3 uid="uid://6s5bi4book4l"]

[ext_resource type="Theme" uid="uid://dgl808q5lpydb" path="res://barkley2/themes/main.tres" id="1_6qvow"]
[ext_resource type="Script" path="res://barkley2/scenes/audio_slider/B2_Audio_Slider.gd" id="2_e1tui"]

[node name="B2_Audio_Slider" type="HSlider"]
custom_minimum_size = Vector2(100, 0)
theme = ExtResource("1_6qvow")
value = 50.0
script = ExtResource("2_e1tui")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
